--- a/oscar4-tokeniser/pom.xml
+++ b/oscar4-tokeniser/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>oscar4-core</artifactId>
             <version>${version}</version>
         </dependency>
+        <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        	<version>4.8.1</version>
+        </dependency>
     </dependencies>
 
 </project>
