--- a/oscar4-core/pom.xml
+++ b/oscar4-core/pom.xml
@@ -20,6 +20,11 @@
             <version>1.2.3</version>
         </dependency>
 
+        <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        	<version>4.8.1</version>
+        </dependency>
     </dependencies>
 
 </project>
