--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>oscar4-tokeniser</module>
         <module>oscar4-memmrecogniser</module>
         <module>oscar4-patternrecogniser</module>
+        <module>oscar4-chemnamedict</module>
     </modules>
 
     <build>
