--- a/oscar4-memmrecogniser/pom.xml
+++ b/oscar4-memmrecogniser/pom.xml
@@ -92,6 +92,11 @@
         	<artifactId>oscar4-obo</artifactId>
         	<version>4.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>apache-log4j-extras</artifactId>
+                <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
