--- a/oscar4-obo/pom.xml
+++ b/oscar4-obo/pom.xml
@@ -31,5 +31,10 @@
     	<artifactId>junit</artifactId>
     	<version>4.8.1</version>
     </dependency>
+    <dependency>
+    	<groupId>log4j</groupId>
+    	<artifactId>apache-log4j-extras</artifactId>
+    	<version>1.0</version>
+    </dependency>
   </dependencies>
 </project>
