--- a/oscar4-core/pom.xml
+++ b/oscar4-core/pom.xml
@@ -27,4 +27,49 @@
         </dependency>
     </dependencies>
 
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <reportSets>
+                     <reportSet>
+                         <reports>
+                             <report>index</report>
+                             <report>summary</report>
+                             <report>dependencies</report>
+                             <report>project-team</report>
+                             <report>license</report>
+                             <report>scm</report>
+                         </reports>
+                     </reportSet>
+                 </reportSets>
+             </plugin>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-javadoc-plugin</artifactId>
+             </plugin>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-surefire-report-plugin</artifactId>
+             </plugin>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-jxr-plugin</artifactId>
+             </plugin>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-pmd-plugin</artifactId>
+                 <configuration>
+                     <targetJdk>1.5</targetJdk>
+                     <linkXref>true</linkXref>
+                 </configuration>
+             </plugin>
+             <plugin>
+                 <groupId>org.codehaus.mojo</groupId>
+                 <artifactId>apt-maven-plugin</artifactId>
+             </plugin>
+         </plugins>
+     </reporting>
+
 </project>
