--- a/oscar4-memmrecogniser/pom.xml
+++ b/oscar4-memmrecogniser/pom.xml
@@ -97,6 +97,11 @@
                 <artifactId>apache-log4j-extras</artifactId>
                 <version>1.0</version>
         </dependency>
+        <dependency>
+        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+        	<artifactId>oscar4-tokenizer</artifactId>
+        	<version>4.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
