--- a/oscar4-patternrecogniser/pom.xml
+++ b/oscar4-patternrecogniser/pom.xml
@@ -92,6 +92,11 @@
         	<artifactId>oscar4-obo</artifactId>
         	<version>4.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+        	<artifactId>oscar4-tokenizer</artifactId>
+        	<version>4.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
