Added a Java API to run Oscar

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>oscar4-chemnamedict</module>
         <module>oscar4-obo</module>
         <module>oscar4-opsin</module>
+        <module>oscar4-api</module>
     </modules>
 
     <build>
