--- a/.hgignore
+++ b/.hgignore
@@ -20,6 +20,7 @@ glob:*ChemicalChunkerParser.java
 glob:*ChemicalChunker.tokens
 glob:*.tokens
 glob:*.exe
+glob:*~
 \.orig\..*$
 \.orig$
 \.chg\..*$
