--- a/oscar4-obo/pom.xml
+++ b/oscar4-obo/pom.xml
@@ -1,40 +1,37 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>oscar4</artifactId>
-    <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-    <version>4.0-SNAPSHOT</version>
-  </parent>
-  <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-  <artifactId>oscar4-obo</artifactId>
-  <version>4.0-SNAPSHOT</version>
-  <name>oscar4-obo</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-    	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-    	<artifactId>oscar4-core</artifactId>
-    	<version>4.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-    	<artifactId>oscar4-chemnamedict</artifactId>
-    	<version>4.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>junit</groupId>
-    	<artifactId>junit</artifactId>
-    	<version>4.8.1</version>
-    </dependency>
-    <dependency>
-    	<groupId>log4j</groupId>
-    	<artifactId>apache-log4j-extras</artifactId>
-    	<version>1.0</version>
-    </dependency>
-  </dependencies>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+        <artifactId>oscar4</artifactId>
+        <version>4.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>oscar4-obo</artifactId>
+    <name>oscar4-obo</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>${oscar.groupId}</groupId>
+            <artifactId>oscar4-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${oscar.groupId}</groupId>
+            <artifactId>oscar4-chemnamedict</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>apache-log4j-extras</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    
 </project>
