--- a/oscar4-tokeniser/pom.xml
+++ b/oscar4-tokeniser/pom.xml
@@ -2,27 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
         <version>4.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oscar4-tokenizer</artifactId>
     <name>oscar4-tokenizer</name>
 
     <dependencies>
         <dependency>
-            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+            <groupId>${oscar.groupId}</groupId>
             <artifactId>oscar4-core</artifactId>
-            <version>${version}</version>
         </dependency>
         <dependency>
         	<groupId>junit</groupId>
         	<artifactId>junit</artifactId>
-        	<version>4.8.1</version>
+        	<scope>test</scope>
         </dependency>
     </dependencies>
 
