--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
             <dependency>
                 <groupId>opsin</groupId>
                 <artifactId>inchi</artifactId>
-                <version>0.8.0</version>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
