--- a/oscar4-api/pom.xml
+++ b/oscar4-api/pom.xml
@@ -28,6 +28,16 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+        	<artifactId>oscar4-tokenizer</artifactId>
+        	<version>4.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+        	<artifactId>oscar4-memmrecogniser</artifactId>
+        	<version>4.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
 </project>
