--- a/oscar4-memmrecogniser/pom.xml
+++ b/oscar4-memmrecogniser/pom.xml
@@ -75,9 +75,9 @@
         </dependency>
 
         <dependency>
-        	<groupId>org.apache.commons</groupId>
+        	<groupId>commons-math</groupId>
         	<artifactId>commons-math</artifactId>
-        	<version>2.1</version>
+        	<version>20040218.045431</version>
         </dependency>
     </dependencies>
 
