Factored out Oscar output formatting

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>oscar4-opsin</module>
         <module>oscar4-api</module>
         <module>oscar4-preprocessor</module>
+        <module>oscar4-formatter</module>
     </modules>
 
     <dependencyManagement>
