Refactored ResourceGetter to use commons-io

--- a/oscar4-core/pom.xml
+++ b/oscar4-core/pom.xml
@@ -19,6 +19,10 @@
             <groupId>xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
 
         <dependency>
         	<groupId>junit</groupId>
