--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,9 @@
         <module>oscar4-core</module>
         <module>oscar4-tokeniser</module>
         <module>oscar4-memmrecogniser</module>
+        <module>oscar4-memmrecogniser-train</module>
         <module>oscar4-patternrecogniser</module>
+        <module>oscar4-patternrecogniser-train</module>
         <module>oscar4-chemnamedict</module>
         <module>oscar4-obo</module>
         <module>oscar4-opsin</module>
