--- a/oscar4-memmrecognizer-train/pom.xml
+++ b/oscar4-memmrecognizer-train/pom.xml
@@ -19,8 +19,19 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>xom</groupId>
+    	<artifactId>xom</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+    	<artifactId>oscar4-core</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+    	<artifactId>oscar4-memmrecogniser</artifactId>
     </dependency>
   </dependencies>
 </project>
