--- a/oscar4-obo/pom.xml
+++ b/oscar4-obo/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.unibe.jexample</groupId>
+            <artifactId>jexample</artifactId>
+            <version>4.4-378</version>
+        </dependency>
     </dependencies>
     
 </project>
