--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <name>UCC Repository</name>
             <url>https://maven.ch.cam.ac.uk/m2repo</url>
         </repository>
+        <repository>
+            <id>jexample-repo</id>
+            <name>JExample Maven repository</name>
+            <url>http://scg.unibe.ch/download/jexample/maven/</url>
+        </repository>
     </repositories>
 
     <modules>
