--- a/oscar4-core/pom.xml
+++ b/oscar4-core/pom.xml
@@ -23,7 +23,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.13</version>
+		</dependency>
         <dependency>
         	<groupId>junit</groupId>
         	<artifactId>junit</artifactId>
