--- a/oscar4-tokeniser/pom.xml
+++ b/oscar4-tokeniser/pom.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-        <artifactId>oscar4</artifactId>
-        <version>4.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+	<parent>
+		<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+		<artifactId>oscar4</artifactId>
+		<version>4.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
-    <artifactId>oscar4-tokenizer</artifactId>
-    <name>oscar4-tokenizer</name>
+	<artifactId>oscar4-tokenizer</artifactId>
+	<name>oscar4-tokenizer</name>
 
-    <dependencies>
-        <dependency>
-            <groupId>${oscar.groupId}</groupId>
-            <artifactId>oscar4-core</artifactId>
-        </dependency>
-        <dependency>
-        	<groupId>junit</groupId>
-        	<artifactId>junit</artifactId>
-        	<scope>test</scope>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>${oscar.groupId}</groupId>
+			<artifactId>oscar4-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${oscar.groupId}</groupId>
+			<artifactId>oscar4-obo</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 </project>
