--- a/oscar4-patternrecogniser/pom.xml
+++ b/oscar4-patternrecogniser/pom.xml
@@ -32,6 +32,12 @@
             <groupId>${oscar.groupId}</groupId>
             <artifactId>oscar4-tokenizer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${oscar.groupId}</groupId>
+            <artifactId>oscar4-recogniser-core</artifactId>
+            <version>4.0-SNAPSHOT</version>
+        </dependency>
+
 
         <dependency>
             <groupId>openNLP</groupId>
