--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <module>oscar4-api</module>
         <module>oscar4-preprocessor</module>
         <module>oscar4-formatter</module>
+        <module>oscar4-recogniser-core</module>
     </modules>
 
     <dependencyManagement>
