--- a/oscar4-recogniser-core/pom.xml
+++ b/oscar4-recogniser-core/pom.xml
@@ -24,9 +24,8 @@
 			<artifactId>oscar4-tokenizer</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>dk.brics</groupId>
+			<groupId>dk.brics.automaton</groupId>
 			<artifactId>automaton</artifactId>
-			<!-- from local repository -->
 		</dependency>
     </dependencies>
  </project>
