--- a/oscar4-obo/pom.xml
+++ b/oscar4-obo/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>jexample</artifactId>
             <version>4.4-378</version>
         </dependency>
+        <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava-collections</artifactId>
+          <version>r03</version>
+        </dependency>
+        
     </dependencies>
     
 </project>
