--- a/oscar4-data/pom.xml
+++ b/oscar4-data/pom.xml
@@ -18,6 +18,10 @@
 			<groupId>${oscar.groupId}</groupId>
 			<artifactId>oscar4-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>${oscar.groupId}</groupId>
+			<artifactId>oscar4-tokenizer</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>jregex</groupId>
