--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
             <dependency>
                 <groupId>xom</groupId>
                 <artifactId>xom</artifactId>
-                <version>1.2.3</version>
+                <version>1.2.5</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
@@ -141,6 +141,11 @@
                 <groupId>commons-math</groupId>
                 <artifactId>commons-math</artifactId>
                 <version>20040218.045431</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.5</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
