--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             </dependency>
             <dependency>
                 <groupId>${oscar.groupId}</groupId>
+                <artifactId>oscar4-recogniser-core</artifactId>
+                <version>${oscar.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${oscar.groupId}</groupId>
                 <artifactId>oscar4-memmrecogniser</artifactId>
                 <version>${oscar.version}</version>
             </dependency>
@@ -124,11 +129,6 @@
                 <artifactId>log4j</artifactId>
                 <version>1.2.13</version>
             </dependency>
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>apache-log4j-extras</artifactId>
-                <version>1.0</version>
-            </dependency>
 
             <dependency>
                 <groupId>openNLP</groupId>
@@ -154,6 +154,16 @@
                 <groupId>commons-math</groupId>
                 <artifactId>commons-math</artifactId>
                 <version>20040218.045431</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.6.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-jdk14</artifactId>
+                <version>1.6.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
