--- a/oscar4-recogniser-core/pom.xml
+++ b/oscar4-recogniser-core/pom.xml
@@ -27,5 +27,11 @@
 			<groupId>dk.brics.automaton</groupId>
 			<artifactId>automaton</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.8.5</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
  </project>
