--- a/oscar4-api/pom.xml
+++ b/oscar4-api/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>oscar4-api</artifactId>
     <name>oscar4-api</name>
 
+
     <dependencies>
         <dependency>
             <groupId>${oscar.groupId}</groupId>
@@ -36,6 +37,11 @@
         <dependency>
         	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         	<artifactId>oscar4-memmrecogniser</artifactId>
+        	<version>4.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+        	<artifactId>oscar4-patternrecogniser</artifactId>
         	<version>4.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
