--- a/oscar4-obo/pom.xml
+++ b/oscar4-obo/pom.xml
@@ -40,6 +40,7 @@
 			<groupId>ch.unibe.jexample</groupId>
 			<artifactId>jexample</artifactId>
 			<version>4.4-378</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
