--- a/oscar4-recogniser-core/pom.xml
+++ b/oscar4-recogniser-core/pom.xml
@@ -42,5 +42,11 @@
 			<version>1.8.5</version>
 			<scope>test</scope> 
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
  </project>
