--- a/oscar4-opsin/pom.xml
+++ b/oscar4-opsin/pom.xml
@@ -20,8 +20,8 @@
             <artifactId>oscar4-chemnamedict</artifactId>
         </dependency>
         <dependency>
-            <groupId>opsin</groupId>
-            <artifactId>inchi</artifactId>
+            <groupId>uk.ac.cam.ch.opsin</groupId>
+            <artifactId>opsin-inchi</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
