--- a/pom.xml
+++ b/pom.xml
@@ -130,9 +130,9 @@
             </dependency>
 
             <dependency>
-                <groupId>opsin</groupId>
-                <artifactId>inchi</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <groupId>uk.ac.cam.ch.opsin</groupId>
+                <artifactId>opsin-inchi</artifactId>
+                <version>2.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
