--- a/oscar4-patternrecogniser/pom.xml
+++ b/oscar4-patternrecogniser/pom.xml
@@ -68,13 +68,16 @@
             <groupId>commons-discovery</groupId>
             <artifactId>commons-discovery</artifactId>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+        	<groupId>commons-collections</groupId>
+        	<artifactId>commons-collections</artifactId>
+        	<version>3.2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
