--- a/oscar4-api/pom.xml
+++ b/oscar4-api/pom.xml
@@ -64,6 +64,11 @@
         	<artifactId>oscar4-patternrecogniser</artifactId>
         	<version>4.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
+        	<artifactId>oscar4-opsin</artifactId>
+        	<version>4.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
 </project>
