--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>wwmm</groupId>
+		<groupId>uk.ac.cam.ch.wwmm</groupId>
 		<artifactId>wwmm-parent</artifactId>
-		<version>1</version>
+		<version>3</version>
 	</parent>
 
 	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
