--- a/oscar4-api/pom.xml
+++ b/oscar4-api/pom.xml
@@ -8,34 +8,34 @@
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
         <version>4.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>oscar4-api</artifactId>
     <name>oscar4-api</name>
-<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<descriptorRefs>
-						<descriptorRef>
-							jar-with-dependencies
-						</descriptorRef>
-					</descriptorRefs>
-					<archive>
-						<manifest>
-							<mainClass>
-								uk.ac.cam.ch.wwmm.oscar.Oscar
-							</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>
+                            jar-with-dependencies
+                        </descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>
+                                uk.ac.cam.ch.wwmm.oscar.Oscar
+                            </mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
+
         <dependency>
             <groupId>${oscar.groupId}</groupId>
             <artifactId>oscar4-core</artifactId>
@@ -45,30 +45,28 @@
             <artifactId>oscar4-chemnamedict</artifactId>
         </dependency>
         <dependency>
+            <groupId>${oscar.groupId}</groupId>
+            <artifactId>oscar4-tokenizer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${oscar.groupId}</groupId>
+            <artifactId>oscar4-memmrecogniser</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${oscar.groupId}</groupId>
+            <artifactId>oscar4-patternrecogniser</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${oscar.groupId}</groupId>
+            <artifactId>oscar4-opsin</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-        	<artifactId>oscar4-tokenizer</artifactId>
-        	<version>4.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-        	<artifactId>oscar4-memmrecogniser</artifactId>
-        	<version>4.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-        	<artifactId>oscar4-patternrecogniser</artifactId>
-        	<version>4.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-        	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
-        	<artifactId>oscar4-opsin</artifactId>
-        	<version>4.0-SNAPSHOT</version>
-        </dependency>
+
     </dependencies>
-    
+
 </project>
