Updated SCM section of POM

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
 
     <scm>
         <url>http://bitbucket.org/wwmm/oscar4/src</url>
+        <connection>hg:http://bitbucket.org/wwmm/oscar4</connection>
+        <developerConnection>hg:https://bitbucket.org/wwmm/oscar4</developerConnection>
     </scm>
 
     <issueManagement>
