--- a/pom.xml
+++ b/pom.xml
@@ -162,11 +162,16 @@
                 <artifactId>poi</artifactId>
                 <version>3.2-FINAL</version>
             </dependency>
-            <dependency>
-                <groupId>wwmm-expediency</groupId>
-                <artifactId>maxent</artifactId>
-                <version>2.4.0</version>
-            </dependency>
+		<dependency>
+			<groupId>org.apache.opennlp</groupId>
+			<artifactId>opennlp-maxent</artifactId>
+			<version>3.0.1-incubating</version>
+		</dependency>
+				<dependency>
+			<groupId>org.apache.opennlp</groupId>
+			<artifactId>opennlp-tools</artifactId>
+			<version>1.5.1-incubating</version>
+		</dependency>
             <dependency>
                 <groupId>dk.brics.automaton</groupId>
                 <artifactId>automaton</artifactId>
