Modified poms to use maven central artifacts for JExample and JRegex.

--- a/oscar4-data/pom.xml
+++ b/oscar4-data/pom.xml
@@ -23,7 +23,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>jregex</groupId>
+			<groupId>net.sourceforge.jregex</groupId>
 			<artifactId>jregex</artifactId>
 		</dependency>
 		<dependency>
