--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
                 <version>20040218.194635</version>
             </dependency>
             <dependency>
-                <groupId>jregex</groupId>
+                <groupId>net.sourceforge.jregex</groupId>
                 <artifactId>jregex</artifactId>
                 <version>1.2_01</version>
             </dependency>
@@ -233,7 +233,7 @@
             </dependency>
 
             <dependency>
-                <groupId>ch.unibe.jexample</groupId>
+                <groupId>net.sf.jexample</groupId>
                 <artifactId>jexample</artifactId>
                 <version>4.4-378</version>
             </dependency>
