Removed unncesary dependendency on trove and updated commons-math dependency

--- a/oscar4-memmrecogniser/pom.xml
+++ b/oscar4-memmrecogniser/pom.xml
@@ -33,32 +33,18 @@
             <groupId>${oscar.groupId}</groupId>
             <artifactId>oscar4-recogniser-core</artifactId>
         </dependency>
-
-
-
-        <dependency>
-            <groupId>commons-math</groupId>
-            <artifactId>commons-math</artifactId>
-        </dependency>
-        <dependency>
-            <!-- needed by commons-maths! -->
-            <groupId>commons-discovery</groupId>
-            <artifactId>commons-discovery</artifactId>
-        </dependency>
-
 		<dependency>
 			<groupId>org.apache.opennlp</groupId>
 			<artifactId>opennlp-maxent</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math</artifactId>
 		</dependency>
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
-        <dependency>
-            <groupId>trove</groupId>
-            <artifactId>trove</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
