--- a/pom.xml
+++ b/pom.xml
@@ -197,11 +197,6 @@
                 <version>2.1</version>
             </dependency>
             <dependency>
-                <groupId>trove</groupId>
-                <artifactId>trove</artifactId>
-                <version>1.1-beta-5</version>
-            </dependency>
-            <dependency>
                 <groupId>commons-discovery</groupId>
                 <artifactId>commons-discovery</artifactId>
                 <version>20040218.194635</version>
@@ -212,10 +207,10 @@
                 <version>1.2_01</version>
             </dependency>
             <dependency>
-                <groupId>commons-math</groupId>
-                <artifactId>commons-math</artifactId>
-                <version>20040218.045431</version>
-            </dependency>
+			    <groupId>org.apache.commons</groupId>
+			    <artifactId>commons-math</artifactId>
+			    <version>2.2</version>
+			</dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
