--- a/oscar4-obo/pom.xml
+++ b/oscar4-obo/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
-            <artifactId>guava-collections</artifactId>
+            <artifactId>guava</artifactId>
         </dependency>
 
         <dependency>
