--- a/oscar4-chemnamedict/pom.xml
+++ b/oscar4-chemnamedict/pom.xml
@@ -26,11 +26,9 @@
             <groupId>xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <scope>test</scope>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
