--- a/oscar4-data/pom.xml
+++ b/oscar4-data/pom.xml
@@ -30,12 +30,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-
-		<dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <scope>test</scope>
-        </dependency>
+                <dependency>
+                        <groupId>xom</groupId>
+                        <artifactId>xom</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
