--- a/oscar4-formatter/pom.xml
+++ b/oscar4-formatter/pom.xml
@@ -14,6 +14,7 @@
         <dependency>
             <groupId>${oscar.groupId}</groupId>
             <artifactId>oscar4-core</artifactId>
+            <version>${oscar.version}</version>
         </dependency>
     </dependencies>
 
