--- a/oscar4-patternrecogniser/pom.xml
+++ b/oscar4-patternrecogniser/pom.xml
@@ -34,6 +34,14 @@
             <groupId>${oscar.groupId}</groupId>
             <artifactId>oscar4-recogniser-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>xom</groupId>
+            <artifactId>xom</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
