--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,8 @@
                   mvn versions:display-dependency-updates
              to check for updates for these below
         -->
-        <opsin-inchi.version>1.6.0</opsin-inchi.version>
+        <opsin-core.version>1.6.0</opsin-core.version>
+        <opsin-inchi.version>${opsin-core.version}</opsin-inchi.version>
         <xom.version>1.2.5</xom.version>
         <log4j.version>1.2.17</log4j.version>
         <icu4j.version>53.1</icu4j.version>
@@ -163,11 +164,15 @@
                 <artifactId>oscar4-data</artifactId>
                 <version>${oscar.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>uk.ac.cam.ch.opsin</groupId>
                 <artifactId>opsin-inchi</artifactId>
                 <version>${opsin-inchi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.ac.cam.ch.opsin</groupId>
+                <artifactId>opsin-core</artifactId>
+                <version>${opsin-core.version}</version>
             </dependency>
             <dependency>
                 <groupId>xom</groupId>
