Update xom to 1.2.10; note that this is still xom.nu's code, but this has been uploaded to maven central under a different groupID

--- a/oscar4-chemnamedict/pom.xml
+++ b/oscar4-chemnamedict/pom.xml
@@ -23,7 +23,7 @@
             <artifactId>commons-lang</artifactId>
         </dependency>
         <dependency>
-            <groupId>xom</groupId>
+            <groupId>com.io7m.xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
         <dependency>
