--- a/oscar4-data/pom.xml
+++ b/oscar4-data/pom.xml
@@ -31,7 +31,7 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
                 <dependency>
-                        <groupId>xom</groupId>
+                        <groupId>com.io7m.xom</groupId>
                         <artifactId>xom</artifactId>
                 </dependency>
 		<dependency>
