--- a/oscar4-memmrecogniser-train/pom.xml
+++ b/oscar4-memmrecogniser-train/pom.xml
@@ -45,7 +45,7 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>xom</groupId>
+            <groupId>com.io7m.xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
 	<dependency>
