--- a/oscar4-patternrecogniser/pom.xml
+++ b/oscar4-patternrecogniser/pom.xml
@@ -39,7 +39,7 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>xom</groupId>
+            <groupId>com.io7m.xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
 
