--- a/oscar4-recogniser-core/pom.xml
+++ b/oscar4-recogniser-core/pom.xml
@@ -31,7 +31,7 @@
             <artifactId>oscar4-obo</artifactId>
         </dependency>
         <dependency>
-            <groupId>xom</groupId>
+            <groupId>com.io7m.xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
         <dependency>
