Add Mark J. Williamson as a dev

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
             <name>Daniel Lowe</name>
         </developer>
         <developer>
+            <id>mw529</id>
+            <name>Mark J. Williamson</name>
+        </developer>
+        <developer>
             <id>ptc24</id>
             <name>Peter Corbett</name>
             <roles>
